--- a/javatutorial/1/index.html
+++ b/javatutorial/1/index.html
@@ -102,7 +102,7 @@
     <h4>Caracters</h4>
     <p>Un simple caracter pot representar un dígit, una lletra o un altre símbol.
         Per a escriure un caracter, utilitzem cometes simples així:
-        <w>'A', 'B', 'C', 'x', 'y', 'z', '0', '1', '2', '9'</w>.
+        <w>'A'</w>, <w>'B'</w>, <w>'C'</w>, <w>'z'</w>, <w>'0'</w>, <w>'1'</w>, <w>'9'</w>.
         Els literals caracter poden representar simbols d'un alfabet, digits de <w>'0'</w>
         a <w>'9'</w>, espais en blanc <w>' '</w>, o altres símbols <w>'$'</w>.
     </p>
@@ -150,7 +150,7 @@
     <quizz>
         <question match>
             <statement>Emparella els tipus de literals</statement>
-            <o>String</o>   <o>"464531######0207"</o>
+            <o>String</o>   <o>"4631###0207"</o>
             <o>Enter</o>   <o>100_000_000</o>
             <o>Caracter</o>   <o>'H'</o>
             <o>Booleà</o>   <o>false</o>
@@ -381,8 +381,8 @@
 
         <question multi>
             <statement>Selecciona les afirmacions correctes</statement>
-            <o>El mètode <w>main</w> pot tenir una altre nom (<w>start</w>, <w>run</w>, <w>program</w>)</o>
-            <o correct><p>Una classe que contingui el mètode <w>main</w> pot tenir qualsevol nom vàlid (<w>Main</w>, <w>App</w>, <w>Demo</w>, etc.)</p></o>
+            <o>El mètode <w>main</w> pot tenir un altre nom (<w>start</w>, <w>run</w>, <w>program</w>)</o>
+            <o correct>Una classe que contingui el mètode <w>main</w> pot tenir qualsevol nom vàlid (<w>Main</w>, <w>App</w>, <w>Demo</w>, etc.)</o>
             <o correct>Per a mostrar un string li'l passem a <w>System.out.println(...)</w></o>
             <o>El mètode <w>main</w> es pot posar a fora de la classe</o>
         </question>
