--- a/javatutorial/3/index.html
+++ b/javatutorial/3/index.html
@@ -116,7 +116,9 @@
         <question text>
             <statement>
                 <p>Què imprimirà aquesta sentència?</p>
-                <w>System.out.println(2 + (-3) + 5 + (-8));</w>
+                <code java>
+                    System.out.println(2 + (-3) + 5 + (-8));
+                </code>
             </statement>
             <o>-4</o>
         </question>
@@ -158,8 +160,10 @@
             <statement>
                 <p>Què imprimeixen aquestes sentències?</p>
             </statement>
-            <p><w>System.out.println((5 / 2) * (5 / 2));</w> <o>4</o></p>
-            <p><w>System.out.println((5 / 2) * (5f / 2));</w> <o>5.0</o></p>
+            <code java>System.out.println((5 / 2) * (5 / 2));</code> <o>4</o>
+            <br>
+            <code java>System.out.println((5 / 2) * (5f / 2));</code> <o>5.0</o>
+            <br>
         </question>
     </quizz>
 
@@ -214,11 +218,15 @@
                 <p>Què imprimiran les següents sentències?</p>
             </statement>
 
-            <p><w>System.out.println("Hola " + "mon");</w> <o>Hola mon</o></p>
-            <p><w>System.out.println("Hola " + 330);</w> <o>Hola 330</o></p>
-            <p><w>System.out.println("Hola " + 'm' + 'o' + 'n');</w> <o>Hola mon</o></p>
-            <p><w>System.out.println("Hola " + ('m' + 'o' + 'n'));</w> <o>Hola 330</o></p>
-            <p><w>System.out.println('m' + 'o' + 'n' + "Hola");</w> <o>330Hola</o></p>
+            <code java>System.out.println("Hola " + "mon");</code> <o>Hola mon</o>
+            <br>
+            <code java>System.out.println("Hola " + 330);</code> <o>Hola 330</o>
+            <br>
+            <code java>System.out.println("Hola " + 'm' + 'o' + 'n');</code> <o>Hola mon</o>
+            <br>
+            <code java>System.out.println("Hola " + ('m' + 'o' + 'n'));</code> <o>Hola 330</o>
+            <br>
+            <code java>System.out.println('m' + 'o' + 'n' + "Hola");</code> <o>330Hola</o>
         </question>
     </quizz>
 
@@ -740,7 +748,7 @@
         <question single>
             <statement>
                 <p>Quin valor retorna aquesta expressió?</p>
-                <w>10 % 5 >= 2 || 10 / 5 <= 2 && !(10 - 5 != 2)</w>
+                <code java>10 % 5 >= 2 || 10 / 5 <= 2 && !(10 - 5 != 2)</code>
             </statement>
 
             <o><w>true</w></o>
