--- a/javatutorial/4/index.html
+++ b/javatutorial/4/index.html
@@ -114,6 +114,12 @@
             <o correct>6</o>
         </question>
     </quizz>
+
+    <challenge>
+        <a href="https://www.hackerrank.com/contests/dam-m3/challenges/arrodonir-la-nota">Arrodonir la nota</a>
+        <br>
+        <a href="https://www.hackerrank.com/contests/dam-m3/challenges/unicode-points">Unicode points</a>
+    </challenge>
 </section>
 
 <section>
