--- a/javatutorial/5/index.html
+++ b/javatutorial/5/index.html
@@ -51,7 +51,7 @@
         }
     </code>
 
-    <p>En aquest exemple, si l'<w>edat</w> és més gran que 100 el codi imprimeix "Pots votar", 
+    <p>En aquest exemple, si l'<w>edat</w> és més gran que 17 el codi imprimeix "Pots votar", 
     en cas contrari, no fa res.</p>
 
     <p>L'expressió també pot ser el valor d'una variable de tipus <w>boolean</w>. Si el valor és <w>true</w>, el
@@ -64,6 +64,12 @@
             System.out.println("Pots votar");
         }
     </code>
+
+    <challenge>
+        <p>
+            <a href="https://www.hackerrank.com/contests/dam-m3/challenges/enquesta-frameworks">Enquesta frameworks</a>
+        </p>
+    </challenge>
 
 
     <h3>if-else</h3>
