--- a/javatutorial/1/index.html
+++ b/javatutorial/1/index.html
@@ -61,11 +61,11 @@
     els utilitzarem sovint en Java.</p>
 
     <p>Aquí tens exemples de literals enters vàlids separats
-        per comes: <w>0, 1, 2, 10, 11, 100</w>.
+        per comes: <w>0</w>, <w>1</w>, <w>2</w>, <w>10</w>, <w>11</w>, <w>100</w>.
     </p>
 
     <p>Si un valor enter conté molts dígits, podem afegir "guions baixos"
-        per a dividir el el nombre en blocs i augmentar la seva
+        per a dividir el nombre en blocs i augmentar la seva
         legibilitat: <w>1_000_000</w>. És més legible que el mateix
         valor escrit <w>1000000</w>.
     </p>
@@ -103,7 +103,7 @@
     <p>Un simple caracter pot representar un dígit, una lletra o un altre símbol.
         Per a escriure un caracter, utilitzem cometes simples així:
         <w>'A'</w>, <w>'B'</w>, <w>'C'</w>, <w>'z'</w>, <w>'0'</w>, <w>'1'</w>, <w>'9'</w>.
-        Els literals caracter poden representar simbols d'un alfabet, digits de <w>'0'</w>
+        Els literals caracter poden representar símbols d'un alfabet, dígits de <w>'0'</w>
         a <w>'9'</w>, espais en blanc <w>' '</w>, o altres símbols <w>'$'</w>.
     </p>
 
@@ -124,7 +124,7 @@
         <w>"123456"</w>, <w>"email123@mail.com"</w>. Un string que conté només
         un caracter com <w>"A"</w> també és vàlid, per no s'ha de confondre amb
         el caracter <w>'A'</w>.
-    <p>Pots veure que els strings poden incloure lletres, digits, espais, i altres caracters.</p>
+    <p>Pots veure que els strings poden incloure lletres, dígits, espais, i altres caracters.</p>
     </p>
 
     <h3>Booleans</h3>
@@ -319,7 +319,7 @@
     <code java>System.out.println("Hello, World!");  // les sentencies han d'acabar amb ;</code>
     
     <p>Aquesta és una de les coses més importants que s'han de comprendre del programa 
-        <strong>Hello World</strong>. Estem invocant un mètode especial <incode java>println</incode>
+        <strong>Hello World</strong>. Estem invocant un mètode especial <w>println</w>
         per a mostrar un string seguit per una nova línia en pantalla. El text s'imprimeix sense les cometes que delimiten l'string. 
     </p>
 
@@ -346,7 +346,7 @@
     <h3>Paraules-clau</h3>
     <p>Com pots veure, inclús un simple prorgama Java consisteix en molts elements, incloent
         <strong>paraules-clau</strong> que són parts del llenguatge. En total, Java té més de 
-        50 paraules-clau que anirem aprenent durant el curs. Pot veure aquí la 
+        50 paraules-clau que anirem aprenent durant el curs. Pots veure aquí la 
         <a href="https://en.wikipedia.org/wiki/List_of_Java_keywords">llista completa de paraules-clau</a>,
         però no tractis de recordar-la en aquest moment.
     </p>
@@ -356,7 +356,7 @@
     </observe>
 
     <h3>Conclusió</h3>
-    <p>Hem vist el programa Java més simple possible que es pot escriure en Java. Té una única classe
+    <p>Hem vist el programa més simple possible que es pot escriure en Java. Té una única classe
         amb un únic mètode <w>main</w>. Tots els programes Java han de tenir un mètode <w>main</w> ja 
         que és el que s'executa en primer lloc quan s'inicia el programa.
     </p>
@@ -404,7 +404,7 @@
     <h3>Mostrar text amb println() i print()</h3>
     <ul>
 
-        <li><p>El mètode <incode java>System.out.println()</incode> mostra l'string que se li passa,
+        <li><p>El mètode <w>System.out.println()</w> mostra l'string que se li passa,
         seguit d'una nova línia a la pantalla (<strong>print-line</strong>). Per exemple, el
         següent fragment de codi imprimeix 4 línies a la pantalla</p>
 
@@ -443,7 +443,7 @@
 
     </li>
     <li>
-        <p>El mètode <incode java>System.out.print</incode> mostra el valor que se li passa i 
+        <p>El mètode <w>System.out.print()</w> mostra el valor que se li passa i 
         posa el cursor (la posició on es mostra un valor) a continuació. Per exemple, el 
         següent codi mostra tots els strings a la mateixa línia.</p>
 
