--- a/viewbinding/index.html
+++ b/viewbinding/index.html
@@ -14,7 +14,7 @@
     <code none data-line="2,3,4">
         android {
             buildFeatures {
-                viewBinding true;
+                viewBinding true
             }
         }
     </code>
